# group6-image-edit

./: Makefile  README.md  readme.md
KeepEdit/: Makefile  README_KeepEdit.md  environment.yml  pyproject.toml
KeepEdit/configs/: project.yaml
KeepEdit/configs/experiments/: keepedit_stage1_moe.yaml  keepedit_stage2_qwen_edit_lora.yaml
KeepEdit/docs/: GT_LORA_WORKFLOW.md  HUGGINGFACE_RELEASE.md  LICENSE_NOTES.md  MOE_LORA_WORKFLOW.md  MTP_LORA_WORKFLOW.md  QWEN2511_BASELINE.md
KeepEdit/hf_release/data/: README.md
KeepEdit/hf_release/weights/: README.md
KeepEdit/reports/: magicbrush_dev_moe_fusion_teacher_release_metrics_summary.json  magicbrush_dev_qwen2511_gt_onestage_mllm_preference.jsonl  magicbrush_dev_qwen2511_gt_onestage_release_metrics.csv  magicbrush_dev_qwen2511_gt_onestage_release_metrics_summary.json  magicbrush_dev_qwen2511_moe_teacher_onestage_mllm_preference.jsonl  magicbrush_dev_qwen2511_moe_teacher_onestage_release_metrics_summary.json
KeepEdit/scripts/: build_moe_fusion_teacher.py  check_required_assets.py  download_hf_with_curl.py  download_required_assets.sh  evaluate_qwen_edit_experiment.sh  make_keepedit_stage_effect_gallery.py  pack_release_data_archives.sh  prepare_magicbrush_parquet.py  prepare_mtp_lora_metadata.py  prepare_qwen_lora_metadata.py  run_experts_by_expert_multi_gpu.py  run_gt_lora_qwen_edit.sh  run_keepedit_moe_fusion.sh  run_moe_teacher_lora.sh  run_mtp_lora_qwen_edit.sh  run_mtp_phasea.sh  run_qwen_edit_lora_multi_gpu.py  run_stage2_onestage_qwen_edit.sh  split_release_data_archives.sh  upload_split_release_archives.sh  validate_diffsynth_metadata.py  validate_magicbrush_parquet.py
KeepEdit/src/keepedit/: __init__.py  (+2 more)
(+138 files in other folders)
