[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "keepedit"
version = "0.1.0"
description = "Research code for high-fidelity instruction-guided image editing with strong content preservation."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "KeepEdit contributors" }]
dependencies = [
  "numpy>=1.24",
  "pillow>=10",
  "scikit-image>=0.22",
  "pandas>=2",
  "pyyaml>=6",
  "tqdm>=4.66",
]

[project.optional-dependencies]
experts = [
  "accelerate>=0.33",
  "diffusers>=0.35.0",
  "huggingface-hub>=0.24",
  "safetensors>=0.4",
  "transformers>=4.46",
  "peft>=0.13",
  "sentencepiece>=0.2",
  "protobuf>=4.25",
]
train = [
  "torch>=2.2",
  "torchvision>=0.17",
  "tensorboard>=2.16",
  "accelerate>=0.33",
  "diffusers>=0.35.0",
  "transformers>=4.46",
  "peft>=0.13",
  "safetensors>=0.4",
]
data = [
  "datasets>=2.20",
  "huggingface-hub>=0.24",
]
clip = [
  "open-clip-torch>=2.24",
]
all = [
  "accelerate>=0.33",
  "diffusers>=0.35.0",
  "huggingface-hub>=0.24",
  "safetensors>=0.4",
  "transformers>=4.46",
  "peft>=0.13",
  "sentencepiece>=0.2",
  "protobuf>=4.25",
  "torch>=2.2",
  "torchvision>=0.17",
  "tensorboard>=2.16",
  "datasets>=2.20",
  "open-clip-torch>=2.24",
]

[project.scripts]
keepedit-run-experts = "keepedit.pipelines.run_experts:main"
keepedit-release-metrics = "keepedit.evaluation.release_metrics:main"
keepedit-mllm-preference = "keepedit.evaluation.mllm_preference:main"

[tool.setuptools.packages.find]
where = ["src"]
